<resources>
    <string name="app_name">Progetto-IUM-TWEB</string>
    <string name="login">Login</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_corsi">Home</string>

    <string name="menu_tools">Tools</string>

    <string name="menu_mie_ripetizioni">Le mie ripetizioni</string>

    <string name="menu_prenota_nuova_ripetizione">Prenota una nuova Ripetizione</string>
    <string name="prenota">Prenota</string>

    <string name="si">Si</string>

    <string name="no">No</string>

    <string name="IP"></string>
    <string name="Registrati">Registrati</string>
    <string name="Login">Login</string>

    <string name="logout">Sei sicuro di voler uscire?</string>

    <string name="ripetizioni_in_corso">Ripetizioni in corso</string>
    <string name="ripetizioni_annullate">Ripetizioni annullate</string>
    <string name="ripetizioni_completate">Ripetizioni completate</string>

    <string name="nome">Nome</string>
    <string name="hint_text">TEXTFIELD</string>
    <string name="cognome">Cognome</string>
    <string name="textfield_label" />
    <string name="la_mia_app">La mia APP</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="lista_professori">Lista Professori</string>
    <string name="a_quale_corso_sei_interessato">A quale corso sei interessato ?</string>
    <string name="settings">Settings</string>
    <string name="registrati">Registrati</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="seleziona_il_corso">Seleziona il corso</string>
    <string name="seleziona_il_professore">Seleziona il professore</string>
    <string name="seleziona_il_giorno">Seleziona il giorno</string>
    <string name="cerca">Cerca</string>
    <string name="seleziona_l_ora">Seleziona l\'ora</string>
    <string name="disdici">Disdici</string>
    <string name="completata">Completata</string>

    <string-array name="days">

        <item></item>
        <item>lunedi</item>
        <item>martedi</item>
        <item>mercoledi</item>
        <item>giovedi</item>
        <item>venerdi</item>

    </string-array>


</resources>
